--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ background-color: var(--mainWhite)!important;
 color: var(--mainDark)!important;
 }
 .text-title{
-  font-family: "Roboto Condensed", cursive;
+  font-family: "oswald", cursive;
   letter-spacing: 0,3rem;
   text-transform: uppercase;
 }
