--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,17 @@ font-size: 1.2rem;
 color: var(--mainYellow);
   
 }
+.txt-fin {
+  margin-left: 50%;
+}
+.btn-fin{
+margin-left: -10%;
+margin-top: 20%;
+}
+.btn-fin01{
+  display: flex;
+  position: absolute;
+  margin-left: 76%;
+  margin-top: -210%;
+  padding-left: 5px;
+}
