--- a/src/App.css
+++ b/src/App.css
@@ -62,3 +62,16 @@ margin-top: 20%;
   margin-top: -210%;
   padding-left: 5px;
 }
+
+.cartProd{
+  display: flex;
+  position: absolute;
+  text-align: center;
+}
+
+#modal-promocao{
+  width: 100%; ;
+  height:100%;
+  background: #54b9a3;
+
+}
