--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -1,12 +1,9 @@
-.modal-container{
-
-  
-  width: 40vw;
-  height: 30vw;
+#modal-promocao{ 
+  width: 55vw;
+  height: 35vw;
   background: rgba(0,0,0,.5) ;
-  position: absolute;
-  top: 100px;
-  left: 350px;
+  position: flex;
+  padding-top: 0;
   z-index: 2000;
   display: flex;
   justify-content:center ;
@@ -16,3 +13,37 @@
 
 }
 
+
+
+@media(max-width:768px){
+  #modal-promocao{
+    position:absolute;
+    left: 40%;
+    right: 40%;
+    top: 120px;
+    padding-top: 0;
+   
+  }
+div#img{
+  position: absolute;
+  left: 100px;
+  top:150px;
+
+}
+ h4, h5{
+  position: absolute;
+  text-align: center;
+  left: 100px;
+  top: 250px;
+}
+.btnLink{
+  position: absolute;
+  left: 80px;
+  top: 200px;
+}
+.btnLink2{
+  position: absolute;
+  left: 50px;
+  top: 350px;
+}
+}
